-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
Qt Creator 5.0.3
-
None
-
ca653a6a2c (qt-creator/qt-creator/master) ca653a6a2c (qt-creator/qt-creator/qmlprojectstorage)
The currently hovered item in the welcome screen restarts its animation several times while the data for other items is still being updated/loaded. This is most visible on the Marketplace page, where the data is loaded from a server and the model is continously updated.
Does perhaps the QModelIndex of the hovered item change on each model update?