Core: Fix resetting animation timer on marketplace items

While the current animation is played other items may be painted
as well and will reset the animation what they should not.
Reset the animation hover timer only if it is the same
item we are hovering over.

Fixes: QTCREATORBUG-26908
Change-Id: I5fc55b5efb6f6b0db541604a92c7e4ddb8811336
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>